--- a/static/css.css
+++ b/static/css.css
@@ -329,3 +329,48 @@ footer p {
   color: #333;
   font-size: 14px;
 }
+
+
+/* 手机端适配 */
+@media (max-width: 768px) {
+  .container {
+    margin-left: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .icon-link {
+    width: 80px; /* 减小图标大小以适应小屏幕 */
+    height: 80px;
+  }
+
+  .icon {
+    width: 40px; /* 减小图标 */
+    height: 40px;
+  }
+
+  .text {
+    font-size: 12px; /* 字体更小 */
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    margin-left: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .icon-link {
+    width: 60px;
+    height: 60px;
+  }
+
+  .icon {
+    width: 25px;
+    height: 25px;
+  }
+
+  .text {
+    font-size: 10px;
+  }
+}
